--- a/index.html
+++ b/index.html
@@ -18,32 +18,33 @@
     <div class="text-banner">
         <h2></h2>
     </div>
-    <div class="board">
-        <section class="computer">
-            <h2>Computer</h2>
-            <div class="table-C">
-                <div></div>
-            </div>
-        </section>
-        <div class="button-wrapper">
-            <button class="shuffle-button">Shuffle & Deal</button> 
-        </div>
-        <div class="button-wrapper">
-            <button class="war-button">WAR</button>
-        </div> 
-        <div class="button-wrapper">
-            <button class="tie-button">Break Tie</button>
-        </div>
-        <div class="button-wrapper">
-            <button class="reset-button">Play Again</button>
-        </div>
-        <section class="player">
-            <h2>Player</h2>
-            <div class="table-P">
-                <div></div>
-            </div>    
-        </section>
+    <div class="cards-C">
+        <div class="flip-1"></div>
+        <div class="flip-2"></div>
+        <div class="flip-3"></div>
     </div>
+    <div class="board-wrapper">
+        <div class="board">
+            <section class="computer">
+                <h2>Computer</h2>
+                <div class="table-C">
+                    <div></div>
+                </div>
+            </section>
+            <section class="player">
+                <h2>Player</h2>
+                <div class="table-P">
+                    <div></div>
+                </div>    
+            </section>  
+        </div> 
+    </div>
+    <div class="cards-P">
+        <div class="flip-4"></div>
+        <div class="flip-5"></div>
+        <div class="flip-6"></div>
+    </div>
+</body>
     <div class="stats">
         <section class="c-stats">
             <p>Cards in hand:</p>
@@ -51,6 +52,12 @@
         <section class="p-stats">
             <p>Cards in hand:</p>
         </section>
-    </div>                           
+    </div>   
+    <div class="button-wrapper">
+        <button class="shuffle-button">Shuffle & Deal</button> 
+        <button class="war-button">DRAW</button>
+        <button class="tie-button">Break Tie</button>
+        <button class="reset-button">Play Again</button>
+    </div>                        
 </body>
 </html>
