resizing for responsive layout and changed UI for announcing round winner

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <div class="board-wrapper">
         <div class="board">
             <section class="computer">
+                <div id="c-crown">♕</div>
                 <h2>Computer</h2>
                 <div class="table-C">
                     <div></div>
                 </div>
             </section>
             <section class="player">
+                <div id="p-crown">♕</div>
                 <h2>Player</h2>
                 <div class="table-P">
                     <div></div>
