--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="title-section">
-        <h1>The Game of War</h1>
+        <h1>War</h1>
     </div>
     <div class="text-banner">
         <h2></h2>
